--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,11 @@
-<div class="container">
+<div class="container py-4">
+  <!-- contenido superior -->
+  <div class="content-above-footer">
+    <!-- Aquí va el contenido que está encima del footer -->
+  </div>
+
   <!-- footer -->
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5">
     <p class="col-12 col-md-4 mb-0 text-body-secondary text-center text-md-start">© 2025 Company, Inc</p>
 
     <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
