--- a/documentation/components/FormComponent.html
+++ b/documentation/components/FormComponent.html
@@ -734,70 +734,74 @@ export class FormComponent implements OnInit {
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;main class&#x3D;&quot;d-flex justify-content-center align-items-center vh-100&quot; style&#x3D;&quot;background-image: url(&#x27;Images/Image 4.svg&#x27;); background-size: cover; background-position: center;&quot;&gt;
-    &lt;div class&#x3D;&quot;p-4 bg-success text-white rounded-3 shadow&quot; style&#x3D;&quot;max-width: 450px; width: 100%; background-color: rgba(15, 61, 32, 0.8);&quot;&gt;
-      &lt;form [formGroup]&#x3D;&quot;form&quot; (ngSubmit)&#x3D;&quot;onSubmit()&quot;&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;main class&#x3D;&quot;d-flex justify-content-center align-items-center vh-100&quot; 
+      style&#x3D;&quot;background-image: url(&#x27;Images/Image 4.svg&#x27;); background-size: cover; background-position: center; overflow-y: auto;&quot;&gt;
+   &lt;!-- Formulario verde --&gt;
+  &lt;div class&#x3D;&quot;p-4 bg-success text-white rounded-3 shadow position-relative&quot; 
+       style&#x3D;&quot;max-width: 450px; width: 100%; background-color: rgba(15, 61, 32, 0.8);&quot;&gt;
+    &lt;form [formGroup]&#x3D;&quot;form&quot; (ngSubmit)&#x3D;&quot;onSubmit()&quot;&gt;
+      &lt;!-- Logo --&gt;
+      &lt;div class&#x3D;&quot;text-center&quot;&gt;
+        &lt;img class&#x3D;&quot;mb-2&quot; src&#x3D;&quot;Images/Logo.svg&quot; alt&#x3D;&quot;Logo&quot; width&#x3D;&quot;150&quot; height&#x3D;&quot;150&quot;&gt;
+      &lt;/div&gt;
+      &lt;!-- Título --&gt;
+      &lt;h1 class&#x3D;&quot;h2 mb-3 text-center fw-bold&quot;&gt;Formulario&lt;/h1&gt;
 
-        &lt;!-- Logo --&gt;
-        &lt;div class&#x3D;&quot;text-center&quot;&gt;
-          &lt;img class&#x3D;&quot;mb-2&quot; src&#x3D;&quot;Images/Logo.svg&quot; alt&#x3D;&quot;Logo&quot; width&#x3D;&quot;202&quot; height&#x3D;&quot;207&quot;&gt;
+      &lt;!-- Campos --&gt;
+      &lt;div class&#x3D;&quot;mb-2&quot;&gt;
+        &lt;label for&#x3D;&quot;name&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Su nombre&lt;/label&gt;
+        &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;name&quot; formControlName&#x3D;&quot;name&quot;&gt;
+        &lt;div *ngIf&#x3D;&quot;form.get(&#x27;name&#x27;)?.invalid &amp;&amp; form.get(&#x27;name&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          El nombre es obligatorio.
         &lt;/div&gt;
-        &lt;!-- Título --&gt;
-        &lt;h1 class&#x3D;&quot;h2 mb-3 text-center fw-bold&quot;&gt;Formulario&lt;/h1&gt;
-  
-        &lt;!-- Campos --&gt;
-        &lt;div class&#x3D;&quot;mb-2&quot;&gt;
-          &lt;label for&#x3D;&quot;name&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Su nombre&lt;/label&gt;
-          &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;name&quot; formControlName&#x3D;&quot;name&quot;&gt;
-          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;name&#x27;)?.invalid &amp;&amp; form.get(&#x27;name&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            El nombre es obligatorio.
+      &lt;/div&gt;
+      &lt;div class&#x3D;&quot;mb-2&quot;&gt;
+        &lt;label for&#x3D;&quot;username&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Nombre de usuario&lt;/label&gt;
+        &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;username&quot; formControlName&#x3D;&quot;username&quot;&gt;
+        &lt;div *ngIf&#x3D;&quot;form.get(&#x27;username&#x27;)?.invalid &amp;&amp; form.get(&#x27;username&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          El nombre de usuario es obligatorio.
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class&#x3D;&quot;mb-2&quot;&gt;
+        &lt;label for&#x3D;&quot;email&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Correo electrónico&lt;/label&gt;
+        &lt;input type&#x3D;&quot;email&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;email&quot; formControlName&#x3D;&quot;email&quot;&gt;
+        &lt;div *ngIf&#x3D;&quot;form.get(&#x27;email&#x27;)?.invalid &amp;&amp; form.get(&#x27;email&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          Introduzca un correo electrónico válido.
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class&#x3D;&quot;mb-2&quot;&gt;
+        &lt;label for&#x3D;&quot;password&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Contraseña&lt;/label&gt;
+        &lt;input type&#x3D;&quot;password&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;password&quot; formControlName&#x3D;&quot;password&quot;&gt;
+        &lt;div *ngIf&#x3D;&quot;form.get(&#x27;password&#x27;)?.invalid &amp;&amp; form.get(&#x27;password&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          La contraseña debe tener al menos 6 caracteres.
+          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;password&#x27;)?.hasError(&#x27;passwordStrength&#x27;)&quot;&gt;
+            La contraseña debe tener al menos un número y un carácter especial.
           &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class&#x3D;&quot;mb-2&quot;&gt;
-          &lt;label for&#x3D;&quot;username&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Nombre de usuario&lt;/label&gt;
-          &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;username&quot; formControlName&#x3D;&quot;username&quot;&gt;
-          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;username&#x27;)?.invalid &amp;&amp; form.get(&#x27;username&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            El nombre de usuario es obligatorio.
-          &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class&#x3D;&quot;mb-3&quot;&gt;
+        &lt;label for&#x3D;&quot;confirmPassword&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Confirmar contraseña&lt;/label&gt;
+        &lt;input type&#x3D;&quot;password&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;confirmPassword&quot; formControlName&#x3D;&quot;confirmPassword&quot;&gt;
+        &lt;div *ngIf&#x3D;&quot;form.get(&#x27;confirmPassword&#x27;)?.invalid &amp;&amp; form.get(&#x27;confirmPassword&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          Las contraseñas deben coincidir.
         &lt;/div&gt;
-        &lt;div class&#x3D;&quot;mb-2&quot;&gt;
-          &lt;label for&#x3D;&quot;email&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Correo electrónico&lt;/label&gt;
-          &lt;input type&#x3D;&quot;email&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;email&quot; formControlName&#x3D;&quot;email&quot;&gt;
-          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;email&#x27;)?.invalid &amp;&amp; form.get(&#x27;email&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            Introduzca un correo electrónico válido.
-          &lt;/div&gt;
+        &lt;!-- Error de contraseñas no coincidentes --&gt;
+        &lt;div *ngIf&#x3D;&quot;form.hasError(&#x27;mismatch&#x27;) &amp;&amp; form.get(&#x27;confirmPassword&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
+          Las contraseñas no coinciden.
         &lt;/div&gt;
-        &lt;div class&#x3D;&quot;mb-2&quot;&gt;
-          &lt;label for&#x3D;&quot;password&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Contraseña&lt;/label&gt;
-          &lt;input type&#x3D;&quot;password&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;password&quot; formControlName&#x3D;&quot;password&quot;&gt;
-          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;password&#x27;)?.invalid &amp;&amp; form.get(&#x27;password&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            La contraseña debe tener al menos 6 caracteres.
-            &lt;div *ngIf&#x3D;&quot;form.get(&#x27;password&#x27;)?.hasError(&#x27;passwordStrength&#x27;)&quot;&gt;
-              La contraseña debe tener al menos un número y un carácter especial.
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class&#x3D;&quot;mb-3&quot;&gt;
-          &lt;label for&#x3D;&quot;confirmPassword&quot; class&#x3D;&quot;form-label fw-semibold&quot;&gt;Confirmar contraseña&lt;/label&gt;
-          &lt;input type&#x3D;&quot;password&quot; class&#x3D;&quot;form-control&quot; id&#x3D;&quot;confirmPassword&quot; formControlName&#x3D;&quot;confirmPassword&quot;&gt;
-          &lt;div *ngIf&#x3D;&quot;form.get(&#x27;confirmPassword&#x27;)?.invalid &amp;&amp; form.get(&#x27;confirmPassword&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            Las contraseñas deben coincidir.
-          &lt;/div&gt;
-          &lt;!-- Error de contraseñas no coincidentes --&gt;
-          &lt;div *ngIf&#x3D;&quot;form.hasError(&#x27;mismatch&#x27;) &amp;&amp; form.get(&#x27;confirmPassword&#x27;)?.touched&quot; class&#x3D;&quot;text-danger&quot;&gt;
-            Las contraseñas no coinciden.
-          &lt;/div&gt;
-        &lt;/div&gt;
-  
-        &lt;!-- Botón --&gt;
-        &lt;button class&#x3D;&quot;btn btn-primary w-100 py-2 fs-5 fw-bold&quot; type&#x3D;&quot;submit&quot; [disabled]&#x3D;&quot;form.invalid&quot;&gt;Crear cuenta&lt;/button&gt;
-      &lt;/form&gt;
-  
-      &lt;!-- Volver --&gt;
-      &lt;a href&#x3D;&quot;/home&quot; class&#x3D;&quot;text-primary text-decoration-underline position-absolute bottom-0 start-0 mb-3 ms-3&quot;&gt;Volver&lt;/a&gt;
+      &lt;/div&gt;
+
+      &lt;!-- Botón --&gt;
+      &lt;button class&#x3D;&quot;btn btn-primary w-100 py-2 fs-5 fw-bold&quot; type&#x3D;&quot;submit&quot; [disabled]&#x3D;&quot;form.invalid&quot;&gt;Crear cuenta&lt;/button&gt;
+    &lt;/form&gt;
+
+    &lt;!-- Volver --&gt;
+    &lt;div class&#x3D;&quot;d-flex justify-content-center mt-3&quot;&gt;
+      &lt;a href&#x3D;&quot;/home&quot; class&#x3D;&quot;text-white text-decoration-underline&quot; style&#x3D;&quot;font-weight: bold; font-size: 1.25rem; padding: 10px 20px;&quot;&gt;
+      Volver&lt;/a&gt;
     &lt;/div&gt;
-  &lt;/main&gt;
-  </code></pre>
+  &lt;/div&gt;
+&lt;/main&gt;</code></pre>
     </div>
 
     <div class="tab-pane fade " id="styleData">
@@ -835,7 +839,7 @@ export class FormComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><main class="d-flex justify-content-center align-items-center vh-100" style="background-image: url(\'Images/Image 4.svg\'); background-size: cover; background-position: center;">    <div class="p-4 bg-success text-white rounded-3 shadow" style="max-width: 450px; width: 100%; background-color: rgba(15, 61, 32, 0.8);">      <form [formGroup]="form" (ngSubmit)="onSubmit()">        <!-- Logo -->        <div class="text-center">          <img class="mb-2" src="Images/Logo.svg" alt="Logo" width="202" height="207">        </div>        <!-- Título -->        <h1 class="h2 mb-3 text-center fw-bold">Formulario</h1>          <!-- Campos -->        <div class="mb-2">          <label for="name" class="form-label fw-semibold">Su nombre</label>          <input type="text" class="form-control" id="name" formControlName="name">          <div *ngIf="form.get(\'name\')?.invalid && form.get(\'name\')?.touched" class="text-danger">            El nombre es obligatorio.          </div>        </div>        <div class="mb-2">          <label for="username" class="form-label fw-semibold">Nombre de usuario</label>          <input type="text" class="form-control" id="username" formControlName="username">          <div *ngIf="form.get(\'username\')?.invalid && form.get(\'username\')?.touched" class="text-danger">            El nombre de usuario es obligatorio.          </div>        </div>        <div class="mb-2">          <label for="email" class="form-label fw-semibold">Correo electrónico</label>          <input type="email" class="form-control" id="email" formControlName="email">          <div *ngIf="form.get(\'email\')?.invalid && form.get(\'email\')?.touched" class="text-danger">            Introduzca un correo electrónico válido.          </div>        </div>        <div class="mb-2">          <label for="password" class="form-label fw-semibold">Contraseña</label>          <input type="password" class="form-control" id="password" formControlName="password">          <div *ngIf="form.get(\'password\')?.invalid && form.get(\'password\')?.touched" class="text-danger">            La contraseña debe tener al menos 6 caracteres.            <div *ngIf="form.get(\'password\')?.hasError(\'passwordStrength\')">              La contraseña debe tener al menos un número y un carácter especial.            </div>          </div>        </div>        <div class="mb-3">          <label for="confirmPassword" class="form-label fw-semibold">Confirmar contraseña</label>          <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword">          <div *ngIf="form.get(\'confirmPassword\')?.invalid && form.get(\'confirmPassword\')?.touched" class="text-danger">            Las contraseñas deben coincidir.          </div>          <!-- Error de contraseñas no coincidentes -->          <div *ngIf="form.hasError(\'mismatch\') && form.get(\'confirmPassword\')?.touched" class="text-danger">            Las contraseñas no coinciden.          </div>        </div>          <!-- Botón -->        <button class="btn btn-primary w-100 py-2 fs-5 fw-bold" type="submit" [disabled]="form.invalid">Crear cuenta</button>      </form>        <!-- Volver -->      <a href="/home" class="text-primary text-decoration-underline position-absolute bottom-0 start-0 mb-3 ms-3">Volver</a>    </div>  </main>  </div>'
+        var COMPONENT_TEMPLATE = '<div><main class="d-flex justify-content-center align-items-center vh-100"       style="background-image: url(\'Images/Image 4.svg\'); background-size: cover; background-position: center; overflow-y: auto;">   <!-- Formulario verde -->  <div class="p-4 bg-success text-white rounded-3 shadow position-relative"        style="max-width: 450px; width: 100%; background-color: rgba(15, 61, 32, 0.8);">    <form [formGroup]="form" (ngSubmit)="onSubmit()">      <!-- Logo -->      <div class="text-center">        <img class="mb-2" src="Images/Logo.svg" alt="Logo" width="150" height="150">      </div>      <!-- Título -->      <h1 class="h2 mb-3 text-center fw-bold">Formulario</h1>      <!-- Campos -->      <div class="mb-2">        <label for="name" class="form-label fw-semibold">Su nombre</label>        <input type="text" class="form-control" id="name" formControlName="name">        <div *ngIf="form.get(\'name\')?.invalid && form.get(\'name\')?.touched" class="text-danger">          El nombre es obligatorio.        </div>      </div>      <div class="mb-2">        <label for="username" class="form-label fw-semibold">Nombre de usuario</label>        <input type="text" class="form-control" id="username" formControlName="username">        <div *ngIf="form.get(\'username\')?.invalid && form.get(\'username\')?.touched" class="text-danger">          El nombre de usuario es obligatorio.        </div>      </div>      <div class="mb-2">        <label for="email" class="form-label fw-semibold">Correo electrónico</label>        <input type="email" class="form-control" id="email" formControlName="email">        <div *ngIf="form.get(\'email\')?.invalid && form.get(\'email\')?.touched" class="text-danger">          Introduzca un correo electrónico válido.        </div>      </div>      <div class="mb-2">        <label for="password" class="form-label fw-semibold">Contraseña</label>        <input type="password" class="form-control" id="password" formControlName="password">        <div *ngIf="form.get(\'password\')?.invalid && form.get(\'password\')?.touched" class="text-danger">          La contraseña debe tener al menos 6 caracteres.          <div *ngIf="form.get(\'password\')?.hasError(\'passwordStrength\')">            La contraseña debe tener al menos un número y un carácter especial.          </div>        </div>      </div>      <div class="mb-3">        <label for="confirmPassword" class="form-label fw-semibold">Confirmar contraseña</label>        <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword">        <div *ngIf="form.get(\'confirmPassword\')?.invalid && form.get(\'confirmPassword\')?.touched" class="text-danger">          Las contraseñas deben coincidir.        </div>        <!-- Error de contraseñas no coincidentes -->        <div *ngIf="form.hasError(\'mismatch\') && form.get(\'confirmPassword\')?.touched" class="text-danger">          Las contraseñas no coinciden.        </div>      </div>      <!-- Botón -->      <button class="btn btn-primary w-100 py-2 fs-5 fw-bold" type="submit" [disabled]="form.invalid">Crear cuenta</button>    </form>    <!-- Volver -->    <div class="d-flex justify-content-center mt-3">      <a href="/home" class="text-white text-decoration-underline" style="font-weight: bold; font-size: 1.25rem; padding: 10px 20px;">      Volver</a>    </div>  </div></main></div>'
     var COMPONENTS = [{'name': 'Album2Component', 'selector': 'app-album2'},{'name': 'Album3Component', 'selector': 'app-album3'},{'name': 'AlbumComponent', 'selector': 'app-album'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'CreateAccountComponent', 'selector': 'app-create-account'},{'name': 'EquipmentComponent', 'selector': 'app-equipment'},{'name': 'EventsComponent', 'selector': 'app-events'},{'name': 'FilmComponent', 'selector': 'app-film'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'FormComponent', 'selector': 'app-form'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'JumbotronComponent', 'selector': 'app-jumbotron'},{'name': 'MonstersComponent', 'selector': 'app-monsters'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'FormComponent'};
