--- a/src/app/components/carousel/carousel.component.css
+++ b/src/app/components/carousel/carousel.component.css
@@ -51,3 +51,32 @@
     box-shadow: none !important;
     outline: none;
   }
+  
+/*Dispositivos móviles*/
+  @media (max-width: 767px) {
+    #myCarousel {
+      margin-bottom: 20px;
+    }
+
+    .carousel-item img {
+      max-height: 350px;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    .carousel-caption {
+      font-size: 1rem;
+    }
+
+    .carousel-control-prev, .carousel-control-next {
+      font-size: 1.5rem;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .carousel-item img {
+      max-height: 500px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
