--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,16 +1,17 @@
-<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+<!-- Carousel -->
+<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" style="z-index: 1;">
   <!-- Botones abajo Carousel -->
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
-    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
 
   <!-- Vistas del Carousel -->
   <div class="carousel-inner">
     <!-- Primera vista -->
     <div class="carousel-item">
-      <img src="Images/Image 1.svg" class="d-block w-100" alt="First slide">
+      <img src="Images/Image 1.svg" class="d-block w-100" alt="First slide" style="object-fit: cover; object-position: center;">
       <div class="container">
         <div class="carousel-caption text-start">
           <p>Metete en nuestra enciclopedia y lee todo sobre los monstruos.</p>
@@ -21,7 +22,7 @@
 
     <!-- Segunda vista -->
     <div class="carousel-item active">
-      <img src="Images/Image 2.svg" class="d-block w-100" alt="Second slide">
+      <img src="Images/Image 2.svg" class="d-block w-100" alt="Second slide" style="object-fit: cover; object-position: center;">
       <div class="container">
         <div class="carousel-caption">
           <p>¿Quieres cazar algún monstruo grande y poderoso? Infórmate primero de las misiones que hay y busca tu favorita.</p>
@@ -32,7 +33,7 @@
 
     <!-- Tercera vista -->
     <div class="carousel-item">
-      <img src="Images/Image 3.svg" class="d-block w-100" alt="Third slide">
+      <img src="Images/Image 3.svg" class="d-block w-100" alt="Third slide" style="object-fit: cover; object-position: center;">
       <div class="container">
         <div class="carousel-caption text-end">
           <p>Monster hunter también tiene su propia película. ¿Quieres informarte?</p>
